Repository is now a volume

--- a/quick-gitserver/Dockerfile
+++ b/quick-gitserver/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Ravi Surulikamu <sravi.in@gmail.com>
 
 ENV HOME /home/git
 RUN apt-get update && apt-get install -y \
-	git \
+	git-core \
 	openssh-server \
 	--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/* \
@@ -15,11 +15,12 @@ RUN apt-get update && apt-get install -y \
 	$HOME/git-shell-commands \
 	&& git init --bare $HOME/project.git
 
-COPY authorized_keys $HOME/.ssh/authorized_keys
+ADD https://github.com/sravi-in.keys $HOME/.ssh/authorized_keys
 
 RUN chmod -R go= $HOME/.ssh \
 	&& chown -R git:git $HOME
 
 WORKDIR $HOME
 EXPOSE 22
+VOLUME $HOME/project.git
 CMD ["/usr/sbin/sshd", "-D"]
